Add how to run in README.md